--- a/packages/happy-app/package.json
+++ b/packages/happy-app/package.json
@@ -41,7 +41,6 @@
     "@elevenlabs/react": "^0.12.3",
     "@elevenlabs/react-native": "^0.5.7",
     "@expo/ui": "~0.2.0-beta.3",
-    "@expo/vector-icons": "^15.0.2",
     "@legendapp/list": "2.0.0-beta.3",
     "@livekit/react-native": "^2.9.0",
     "@livekit/react-native-expo-plugin": "^1.0.1",
@@ -125,6 +124,7 @@
     "libsodium-wrappers": "0.8.2",
     "livekit-client": "^2.15.4",
     "lottie-react-native": "~7.3.1",
+    "lucide-react-native": "^0.563.0",
     "mermaid": "^11.12.1",
     "posthog-react-native": "^4.16.2",
     "qrcode": "^1.5.4",
