chore: update .gitignore and enhance error handling in createWorktree
- Added a new entry to .gitignore for local unhappy states/worktrees to prevent accidental commits.
- Enhanced error handling in createWorktree to include stable error codes for better UI feedback, improving the clarity of error messages related to git repository checks and worktree creation.

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,8 @@ CLAUDE.local.md
 
 .dev/worktree/*
 
+# Unhappy local state/worktrees (keep local, don't commit)
+.unhappy/
+
 # Development planning notes (keep local, don't commit)
 notes/
