chore: update dependencies and configurations for unhappy-app and unhappy-cli
- Removed nohoist configuration for certain packages in package.json.
- Added resolutions for specific versions of react, react-dom, and react-native.
- Updated react-native-worklets dependency from 0.5.1 to 0.7.2.
- Adjusted import statements in various files to align with updated dependencies.
- Enhanced metro.config.js to handle double-encoded Expo asset URLs.
- Updated auth URL scheme in unhappy-cli for mobile authentication.

--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
             "packages/unhappy-app",
             "packages/unhappy-cli",
             "packages/unhappy-server"
-        ],
-        "nohoist": [
-            "**/zod",
-            "**/react",
-            "**/react-dom",
-            "**/react-native",
-            "**/react-native/**",
-            "**/react-native-edge-to-edge/**",
-            "**/react-native-incall-manager/**"
         ]
+    },
+    "resolutions": {
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-native": "0.81.5"
     },
     "packageManager": "yarn@1.22.22"
 }
