--- a/packages/unhappy-cli/package.json
+++ b/packages/unhappy-cli/package.json
@@ -95,7 +95,7 @@
     "@types/http-proxy": "^1.17.17",
     "@types/ps-list": "^6.2.1",
     "@types/qrcode-terminal": "^0.12.2",
-    "@types/react": "^19.2.7",
+    "@types/react": "~19.1.10",
     "@types/tmp": "^0.2.6",
     "ai": "^5.0.107",
     "axios": "^1.13.2",
@@ -110,7 +110,7 @@
     "open": "^10.2.0",
     "ps-list": "^8.1.1",
     "qrcode-terminal": "^0.12.0",
-    "react": "^19.2.0",
+    "react": "19.1.0",
     "socket.io-client": "^4.8.1",
     "tar": "^7.5.2",
     "tmp": "^0.2.5",
