fix: update bundle IDs and namespaces for development and preview variants
- Corrected bundle IDs in app.config.js, CONTRIBUTING.md, and google-services.json to use the new format.
- Updated namespace and applicationId in build.gradle and MainActivity.kt for consistency.
- Adjusted Info.plist files for iOS to reflect the new bundle ID format.
- Ensured all references to the development and preview variants are consistent across the project.

--- a/packages/unhappy-app/android/app/build.gradle
+++ b/packages/unhappy-app/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'im.unhappy.app-develop'
+    namespace 'im.unhappy.app.develop'
     defaultConfig {
-        applicationId 'im.unhappy.app-develop'
+        applicationId 'im.unhappy.app.develop'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
