--- a/packages/unhappy-cli/package.json
+++ b/packages/unhappy-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unhappy-coder",
+  "name": "unhappy-cli",
   "version": "0.14.6",
   "description": "Mobile and Web client for Claude Code and Codex",
   "author": "Kirill Dubovitskiy",
