refactor: rename references from "happy" to "unhappy" across documentation and code
- Updated README, CLI, and configuration files to reflect the new naming convention.
- Changed local storage keys, environment variables, and paths to use "unhappy" instead of "happy".
- Adjusted URLs and app identifiers to align with the new branding.
- Ensured consistency in command examples and documentation throughout the project.

--- a/packages/unhappy-app/android/app/src/main/AndroidManifest.xml
+++ b/packages/unhappy-app/android/app/src/main/AndroidManifest.xml
@@ -97,8 +97,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="happy"/>
-        <data android:scheme="exp+happy"/>
+        <data android:scheme="unhappy"/>
+        <data android:scheme="exp+unhappy"/>
       </intent-filter>
     </activity>
   </application>
