--- a/packages/unhappy-server/deploy/handy.yaml
+++ b/packages/unhappy-server/deploy/handy.yaml
@@ -32,9 +32,9 @@ spec:
         - name: PORT
           value: "3005"
         - name: REDIS_URL
-          value: redis://happy-redis:6379
+          value: redis://unhappy-redis:6379
         - name: S3_PUBLIC_URL
-          value: https://files.cluster-fluster.com/happy
+          value: https://files.cluster-fluster.com/unhappy
         envFrom:
         - secretRef:
             name: handy-secrets
