--- a/packages/unhappy-app/ios/Unhappydev/Info.plist
+++ b/packages/unhappy-app/ios/Unhappydev/Info.plist
@@ -36,7 +36,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>exp+happy</string>
+          <string>exp+unhappy</string>
         </array>
       </dict>
     </array>
