--- a/packages/unhappy-cli/.env.dev-local-server
+++ b/packages/unhappy-cli/.env.dev-local-server
@@ -1,4 +1,4 @@
-# Use separate dev directory for happy data
+# Use separate dev directory for unhappy data
 # Useful to allow having separate auth for local dev / production dogfooding
 UNHAPPY_HOME_DIR=~/.unhappy-dev
 
