--- a/packages/unhappy-server/deploy/unhappy-redis.yaml
+++ b/packages/unhappy-server/deploy/unhappy-redis.yaml
@@ -1,20 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: happy-redis
+  name: unhappy-redis
   labels:
-    app: happy-redis
+    app: unhappy-redis
 spec:
   ports:
   - port: 6379
     name: redis
   selector:
-    app: happy-redis
+    app: unhappy-redis
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: happy-redis-config
+  name: unhappy-redis-config
 data:
   redis.conf: |
     dir /data
@@ -28,17 +28,17 @@ data:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: happy-redis
+  name: unhappy-redis
 spec:
-  serviceName: happy-redis
+  serviceName: unhappy-redis
   replicas: 1
   selector:
     matchLabels:
-      app: happy-redis
+      app: unhappy-redis
   template:
     metadata:
       labels:
-        app: happy-redis
+        app: unhappy-redis
     spec:
       containers:
       - name: redis
@@ -64,7 +64,7 @@ spec:
       volumes:
       - name: redis-config
         configMap:
-          name: happy-redis-config
+          name: unhappy-redis-config
   volumeClaimTemplates:
   - metadata:
       name: redis-data
