--- a/packages/unhappy-cli/package.json
+++ b/packages/unhappy-cli/package.json
@@ -63,6 +63,7 @@
     "dev": "tsx src/index.ts",
     "dev:local-server": "$npm_execpath run build && tsx --env-file .env.dev-local-server src/index.ts",
     "dev:integration-test-env": "$npm_execpath run build && tsx --env-file .env.integration-test src/index.ts",
+    "e2e:offline:title": "node scripts/e2e-change-title-offline.mjs",
     "prepublishOnly": "$npm_execpath run build && $npm_execpath test",
     "release": "$npm_execpath install && release-it",
     "postinstall": "node scripts/unpack-tools.cjs",
