refactor(unhappy-app): switch to Expo CNG managed workflow
Stop committing generated native projects by removing tracked ios/android directories and ignoring them in git.

Also update the prebuild script to use expo prebuild --clean and document the CNG workflow in CONTRIBUTING.

--- a/packages/unhappy-app/package.json
+++ b/packages/unhappy-app/package.json
@@ -10,7 +10,7 @@
     "submit": "eas submit --platform ios",
     "web": "expo start --web",
     "test": "vitest",
-    "prebuild": "rm -rf android ios && expo prebuild",
+    "prebuild": "expo prebuild --clean",
     "ota": "APP_ENV=preview NODE_ENV=preview tsx sources/scripts/parseChangelog.ts && yarn typecheck && eas update --branch preview",
     "ota:production": "npx eas-cli@latest workflow:run ota.yaml",
     "typecheck": "tsc --noEmit",
