feat(unhappy-app): enhance EAS submit configurations for multiple environments
Updated eas.json to include separate submit configurations for development, preview, and production environments. Modified package.json to reflect these changes, allowing for environment-specific submission commands.

--- a/packages/unhappy-app/package.json
+++ b/packages/unhappy-app/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "ios:connected-device": "yarn ios -d",
-    "submit": "eas submit --platform ios",
+    "submit": "cross-env APP_ENV=production eas submit --platform ios --profile production",
     "web": "expo start --web",
     "test": "vitest",
     "prebuild": "expo prebuild --clean",
@@ -23,6 +23,9 @@
     "android:dev": "cross-env APP_ENV=development expo run:android",
     "android:preview": "cross-env APP_ENV=preview expo run:android",
     "android:production": "cross-env APP_ENV=production expo run:android",
+    "submit:dev": "cross-env APP_ENV=development eas submit --platform ios --profile development",
+    "submit:preview": "cross-env APP_ENV=preview eas submit --platform ios --profile preview",
+    "submit:production": "cross-env APP_ENV=production eas submit --platform ios --profile production",
     "start:dev": "cross-env APP_ENV=development expo start",
     "start:preview": "cross-env APP_ENV=preview expo start",
     "start:production": "cross-env APP_ENV=production expo start",
