feat(web): add PWA export and service worker pipeline
Add a web-focused export script that enables PWA assets and generated Workbox service worker during build and container publish flows.\n\nThis updates web and Tauri build commands to use the new export:web flow, adds install manifest icons/meta tags, service worker bootstrap, and dependency/config updates needed for offline caching assets.\n\nBuild docs and deployment references were aligned to the same script entrypoint.

--- a/Dockerfile.webapp
+++ b/Dockerfile.webapp
@@ -34,7 +34,7 @@ ENV EXPO_PUBLIC_UNHAPPY_SERVER_URL=$EXPO_PUBLIC_UNHAPPY_SERVER_URL
 
 COPY packages/unhappy-app ./packages/unhappy-app
 
-RUN yarn workspace unhappy-app expo export --platform web --output-dir dist
+RUN yarn workspace unhappy-app export:web
 
 # Stage 3: runtime with Nginx
 FROM nginx:alpine AS runner
