--- a/packages/unhappy-app/package.json
+++ b/packages/unhappy-app/package.json
@@ -9,6 +9,7 @@
     "ios:connected-device": "yarn ios -d",
     "submit": "cross-env APP_ENV=production eas submit --platform ios --profile production",
     "web": "expo start --web",
+    "export:web": "expo export --platform web --output-dir dist && node sources/scripts/enablePwa.mjs dist && node sources/scripts/buildWorkbox.mjs dist",
     "test": "vitest",
     "prebuild": "expo prebuild --clean",
     "ota": "APP_ENV=preview NODE_ENV=preview tsx sources/scripts/parseChangelog.ts && yarn typecheck && eas update --branch preview",
@@ -180,7 +181,8 @@
     "patch-package": "^8.0.0",
     "react-test-renderer": "19.0.0",
     "tsx": "^4.20.4",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "workbox-build": "^7.4.0"
   },
   "private": true,
   "packageManager": "yarn@1.22.22"
